# CLIc-rs

./: Cargo.toml  Makefile  README.md
benches/: gpu.rs
benchmark/: clic_bench.cpp  run.sh
src/: backend.rs
