[package]
name = "clic-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
gpu-tests = []

[dependencies]
opencl3 = "0.9"
lru = "0.12"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gpu"
harness = false
